<resources>
    <string name="app_name">AppFrontEnd</string>
    <string name="title">My Cloud Explorer</string>
    <string name="signin">Sign In</string>
    <string name="Signup">Sign Up</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="Email">email</string>
    <string name="repassword">re-enter password</string>
    <string name="Create">create account</string>
    <string name="login">login</string>
    <string name="aws">amazon s3</string>
    <string name="gcloud">gcloud</string>
    <string name="dropbox">dropbox</string>
    <string name="addclouddetails">add cloud details</string>
    <string name="listfiles">list files</string>
    <string name="downloadfiles">download files</string>
    <string name="uploadfiles">upload files</string>
    <string name="bucket_name">Bucket Name</string>
    <string name="acesskeyid">Access Key ID</string>
    <string name="SecretAccessKey">Secret Access Key</string>
    <string name="addcloud">Add AWS S3 Account</string>
    <string name="file1.txt">File1.txt</string>
    <string name="file2.jpg">File2.jpg</string>
    <string name="file3.pdf">File3.pdf</string>
    <string name="filename">enter file name</string>
    <string name="filelocation">enter file location</string>
    <string name="browse">browse</string>
    <string name="uploadfile">upload file</string>
    <string name="selectfile">select file</string>
    <string name="downloadloc">Enter file download location</string>
    <string name="Downloadfile">Download File</string>
    <string name="editprofile">Edit Profile</string>
</resources>
